<resources>
    <string name="app_name">Ejercicio con RADIO BUTTON</string>
    <string name="txt1">Ingrese el valor 1</string>
    <string name="txt2">Ingrese el valor 2</string>

    //
    <string name="button">Calcular</string>

    <string name="rb1">Sumar</string>
    <string name="rb2">Restar</string>
    <string name="rb3">Multiplicar</string>
    <string name="rb4">Dividir</string>


    <string name="label1">Resultado</string>
</resources>